# wolvic

./: .editorconfig  .gitignore  .gitmodules  .taskcluster.yml  CHROMIUM.md  CONTRIBUTING.md  GECKO.md  GECKO_REVISION  NEWS.md  README.md  announcements.json  build.gradle  data_review_multiwindow-steward  experiences.json  gradle.properties  index.html  issue_template  l10n.toml  props-chromium.json  props.json  settings.gradle  third_party_hash  versions.gradle
.github/: FUNDING.yml  (+1 more)
app/: .gitignore  CMakeLists.txt  build.gradle  metrics.yaml  pings.yaml  proguard-rules.pro
app/aars/: appcompat.aar
app/hvrArm64GeckoGeneric/release/: output-metadata.json
app/hvrArm64GeckoMainlandChina/release/: output-metadata.json
app/oculusvr/release/: output.json
app/picoxrArm64ChromiumGeneric/release/: output-metadata.json
app/picoxrArm64GeckoGeneric/release/: output-metadata.json
app/picoxrArm64GeckoMainlandChina/release/: output-metadata.json
app/schemas/org.mozilla.vrbrowser.db.AppDatabase/: 1.json
app/schemas/org.mozilla.vrbrowser.db.BookmarkDatabase/: 1.json
app/src/aosp/: AndroidManifest.xml
app/src/aosp/assests/: vr_controller_ml2.mtl
app/src/aosp/assets/: vr_controller_magicleap2.mtl
app/src/appInChina/assets/: Privacy Policy_Wolvic_0621.docx  Privacy_Policy_Wolvic_0703.docx  User Agreement_Wolvic_0621.docx
app/src/chromium/assets/: content_shell.pak  userAgentOverride.json  wolvic.pak
app/src/debug/: AndroidManifest.xml
app/src/gecko/assets/: userAgentOverride.json
app/src/googlevr/: AndroidManifest.xml
app/src/googlevr/assets/: vr_controller_daydream.mtl  vr_controller_daydream_tex.ktx
app/src/googlevr/cpp/: DeviceDelegateGoogleVR.cpp  DeviceDelegateGoogleVR.h  native-lib.cpp
app/src/googlevrFlat/: AndroidManifest.xml
app/src/hvr/: AndroidManifest.xml
app/src/hvr/assets/: hvr_6dof_left.mtl  hvr_6dof_right.mtl  vr_controller_focus.mtl  vr_controller_oculusquest_left.mtl  vr_controller_oculusquest_tex.ktx
app/src/hvr/cpp/: native-lib.cpp
app/src/hvr3dof/: AndroidManifest.xml
app/src/lynx/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: FirefoxPlatform2_low.mtl  Minitray.mtl  cacheOverrides.json  desktopModeOverrides.json  generic-trigger.mtl  meadow_v4.mtl  spinners_v3.ktx  spinners_v3.mtl  userAgentOverride.json  vr_controller_daydream.mtl  vr_controller_oculusgo.mtl
app/src/main/cpp/: Assertions.h  BrowserEGLContext.cpp  BrowserEGLContext.h  BrowserWindow.cpp  BrowserWindow.h  BrowserWorld.cpp  BrowserWorld.h  BrowserWorldFileReader.cpp  BrowserWorldFileReader.h  Camera.cpp  Camera.h  Controller.cpp  Controller.h  ControllerContainer.cpp  ControllerContainer.h  ControllerDelegate.h  Cylinder.cpp  Cylinder.h  Device.h  DeviceDelegate.h  DeviceUtils.cpp  DeviceUtils.h  ElbowModel.cpp  ElbowModel.h  EngineSurfaceTexture.cpp  EngineSurfaceTexture.h  Environment.cpp  Environment.h  ExternalBlitter.cpp  ExternalBlitter.h  ExternalVR.cpp  ExternalVR.h  FadeAnimation.cpp  FadeAnimation.h  FadeBlitter.cpp  FadeBlitter.h  GazeControllerDelegate.cpp  GazeControllerDelegate.h  GeckoSurfaceTexture.cpp  GeckoSurfaceTexture.h  (+47 more)
app/src/noapi/: AndroidManifest.xml
app/src/noapi/cpp/: DeviceDelegateNoAPI.cpp  DeviceDelegateNoAPI.h  native-lib.cpp
app/src/nreal/: AndroidManifest.xml
app/src/nreal/cpp/: DeviceDelegateNreal.cpp  DeviceDelegateNreal.h
app/src/oculusvr/: AndroidManifest.xml
app/src/oculusvr/assets/: vr_controller_metaquest3_left.mtl  vr_controller_metaquest3_left_tex.ktx  vr_controller_metaquest3_left_tex_srgb.ktx  vr_controller_metaquest3_right.mtl  vr_controller_metaquest3_right_tex.ktx  vr_controller_metaquest3_right_tex_srgb.ktx  vr_controller_metaquestpro_left.mtl  vr_controller_metaquestpro_right.mtl  vr_controller_oculusgo.mtl  vr_controller_oculusgo_tex.ktx  vr_controller_oculusgo_tex_srgb.ktx  vr_controller_oculusquest2_left.mtl  vr_controller_oculusquest2_right.mtl  vr_controller_oculusquest2_tex.ktx  vr_controller_oculusquest2_tex_srgb.ktx  vr_controller_oculusquest_right.mtl  vr_controller_oculusquest_tex_srgb.ktx
app/src/oculusvr/cpp/: DeviceDelegateOculusVR.cpp  DeviceDelegateOculusVR.h  OculusSwapChain.cpp  OculusSwapChain.h  OculusVRLayers.cpp  OculusVRLayers.h
app/src/oculusvrArmDebug/: AndroidManifest.xml
app/src/oculusvrArmRelease/: AndroidManifest.xml
app/src/oculusvrChromiumMetaStore/: AndroidManifest.xml
app/src/openxr/cpp/: DeviceDelegateOpenXR.cpp  DeviceDelegateOpenXR.h  OpenXRActionSet.cpp  OpenXRActionSet.h  OpenXRExtensions.cpp  OpenXRExtensions.h  OpenXRGestureManager.cpp  OpenXRGestureManager.h  OpenXRHelpers.h  OpenXRInput.cpp  OpenXRInput.h  OpenXRInputMappings.h  OpenXRInputSource.cpp  OpenXRInputSource.h  OpenXRLayers.cpp  OpenXRLayers.h  OpenXRPassthroughStrategy.cpp  OpenXRPassthroughStrategy.h  OpenXRSwapChain.cpp  OpenXRSwapChain.h
app/src/pfdmxr/: AndroidManifest.xml
app/src/pfdmxr/assets/: vr_controller_yvr_touch.ktx  vr_controller_yvr_touch_left.mtl  vr_controller_yvr_touch_right.mtl  vr_controller_yvr_touch_srgb.ktx  vr_controller_yvr_touch_v2.ktx  vr_controller_yvr_touch_v2_left.mtl  vr_controller_yvr_touch_v2_right.mtl  vr_controller_yvr_touch_v2_srgb.ktx
app/src/picovr/: AndroidManifest.xml
app/src/picovr/assets/: .gitignore  g2-Controller.mtl  g2.ktx  g2.mtl  left_controller.mtl  neo2.ktx  neo2.mtl  neo2_left.ktx  neo2_right.ktx  neo3.ktx  neo3.mtl  right_controller.mtl
app/src/picovr/cpp/: DeviceDelegatePicoVR.cpp  DeviceDelegatePicoVR.h  VRBrowserPico.cpp  VRBrowserPico.h  native-lib.cpp
app/src/picoxr/: ASSET-NOTICE.md  AndroidManifest.xml
app/src/picoxr/assets/: vr_controller_pico3.mtl  vr_controller_pico4.mtl  vr_controller_pico4_left.mtl  vr_controller_pico4_right.mtl  vr_controller_pico4_tex.ktx  vr_controller_pico4u_left.mtl  (+4 more)
app/src/spaces/: AndroidManifest.xml
app/src/svr/: AndroidManifest.xml
app/src/visionglass/: AndroidManifest.xml
app/src/wavevr/: AndroidManifest.xml
app/visionglassArm64GeckoGeneric/release/: output-metadata.json
app/visionglassArm64GeckoMainlandChina/release/: output-metadata.json
(+1860 files in other folders)
